Closed Bug 746139 Opened 12 years ago Closed 12 years ago

local JNI frame won't be popped if init fails

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: blassey, Assigned: blassey)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
      No description provided.
Attachment #615702 - Flags: review?(doug.turner)
Attachment #615702 - Flags: review?(doug.turner) → review+
Attachment #615702 - Flags: approval-mozilla-central?
Attachment #615702 - Flags: approval-mozilla-central? → approval-mozilla-central+
https://hg.mozilla.org/mozilla-central/rev/9b2440c92909
Assignee: nobody → blassey.bugs
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
Regression :( Robocop Checkerboarding Benchmark increase 21.8% on Android 2.2 (Native) Mozilla-Inbound
------------------------------------------------------------------------------------------------------
   Previous: avg 0.813 stddev 0.006 of 30 runs up to revision d2b34e4338bb
   New     : avg 0.990 stddev 0.000 of 5 runs since revision 344a48cc9998
   Change  : +0.177 (21.8% / z=27.800)
   Graph   : http://mzl.la/I4Nh5G

Changeset range: http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d2b34e4338bb&tochange=344a48cc9998

Changesets:
 * http://hg.mozilla.org/integration/mozilla-inbound/rev/190fc7cd65c6
   : George Wright <gwright@mozilla.com> - Bug 747274 - Add a pref (default to true on Android) to forcibly use nearest pixel filtering for background drawing. r=jrmuizel,ajuma a=blassey
   : http://bugzilla.mozilla.org/show_bug.cgi?id=747274

 * http://hg.mozilla.org/integration/mozilla-inbound/rev/9b2440c92909
   : Brad Lassey <blassey@mozilla.com> - bug 746139 - local JNI frame won't be popped if init fails r=dougt a=lsblakk
   : http://bugzilla.mozilla.org/show_bug.cgi?id=746139

 * http://hg.mozilla.org/integration/mozilla-inbound/rev/344a48cc9998
   : Brad Lassey <blassey@mozilla.com> - bug 746132 - Screenshot buffers won't be freed if tab not found r=kats a=lsblakk
   : http://bugzilla.mozilla.org/show_bug.cgi?id=746132
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: