bug 746139 - local JNI frame won't be popped if init fails r=dougt a=lsblakk